<resources>
    <string name="app_name">Weather_Test</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Temperature">Temperature</string>
    <string name="Condition">Condition</string>
    <string name="Location">Location</string>
    <string name="condition_icon">condition_icon</string>
    <string name="powered_by_yahoo">powered_by_yahoo</string>
    <string name="Test">Test</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_login">Login</string>
</resources>
